--- a/README.adoc
+++ b/README.adoc
@@ -11,7 +11,7 @@ image:https://img.shields.io/github/license/openturing/turing.svg?style=for-the-
 image:https://img.shields.io/github/last-commit/openturing/turing.svg?style=for-the-badge&logo=java)[GitHub last commit]
 image:https://img.shields.io/github/actions/workflow/status/openturing/turing/build.yml?branch=2025.1&style=for-the-badge&logo=GitHub[link="https://github.com/openviglet/turing/actions/workflows/build.yml"]
 image:https://img.shields.io/badge/Sonar-Code%20Quality-brightgreen?style=for-the-badge&logo=SonarCloud[link="https://sonarcloud.io/project/overview?id=turing-app"]
-image:https://img.shields.io/badge/Javadoc-Release%20{viglet-version}-brightgreen?style=for-the-badge&logo=OpenJDK[link="https://turing.viglet.com/turing/latest/javadoc/"]
+image:https://img.shields.io/badge/Javadoc-Release%20{viglet-version}-brightgreen?style=for-the-badge&logo=OpenJDK[link="https://turing.viglet.com/latest/javadoc/"]
 
 == Preface
 
