--- a/README.adoc
+++ b/README.adoc
@@ -7,15 +7,15 @@ Viglet Team <opensource@viglet.com>
 
 [preface]
 image:https://img.shields.io/badge/Download-Release%20{viglet-version}-blue?style=for-the-badge&logo=OpenJDK[link="https://viglet.com/turing/download/"]
-image:https://img.shields.io/github/license/openturing/turing.svg?style=for-the-badge&logo=Apache["License"]
-image:https://img.shields.io/github/last-commit/openturing/turing.svg?style=for-the-badge&logo=java)[GitHub last commit]
-image:https://img.shields.io/github/actions/workflow/status/openturing/turing/build.yml?branch=0.3.9&style=for-the-badge&logo=GitHub[link="https://github.com/openturing/turing/actions/workflows/build.yml"]
+image:https://img.shields.io/github/license/openviglet/turing.svg?style=for-the-badge&logo=Apache["License"]
+image:https://img.shields.io/github/last-commit/openviglet/turing.svg?style=for-the-badge&logo=java)[GitHub last commit]
+image:https://img.shields.io/github/actions/workflow/status/openviglet/turing/build.yml?branch=0.3.9&style=for-the-badge&logo=GitHub[link="https://github.com/openviglet/turing/actions/workflows/build.yml"]
 image:https://img.shields.io/badge/Sonar-Code%20Quality-brightgreen?style=for-the-badge&logo=SonarCloud[link="https://sonarcloud.io/organizations/viglet-turing/projects"]
-image:https://img.shields.io/badge/Javadoc-Release%20{viglet-version}-brightgreen?style=for-the-badge&logo=OpenJDK[link="https://openturing.github.io/turing/{viglet-version}/javadoc/"]
+image:https://img.shields.io/badge/Javadoc-Release%20{viglet-version}-brightgreen?style=for-the-badge&logo=OpenJDK[link="https://openviglet.github.io/turing/{viglet-version}/javadoc/"]
 
 == Preface
 
-Viglet Turing ES (https://openviglet.github.io/turing/) is an open source solution (https://github.com/openturing), which has Semantic Navigation and Chat bot as its main features. You can choose from several NLPs to enrich the data. All content is indexed in Solr as search engine.
+Viglet Turing ES (https://openviglet.github.io/turing/) is an open source solution (https://github.com/openviglet), which has Semantic Navigation and Chat bot as its main features. You can choose from several NLPs to enrich the data. All content is indexed in Solr as search engine.
 
 :numbered:
 
@@ -152,7 +152,7 @@ Define attributes that will be used as filters for your navigation, consolidatin
 Through attributes defined in the contents, it is possible to use them to restrict their display based on the user's profile.
 
 === SDK Java
-Java API (https://github.com/openturing/turing-java-sdk) facilitates the use and access to Viglet Turing ES, without the need for consumer search content with complex queries.
+Java API (https://github.com/openviglet/turing-java-sdk) facilitates the use and access to Viglet Turing ES, without the need for consumer search content with complex queries.
 
 == Chatbot
 Communicate with your client and elaborate complex intents, obtain reports and progressively evolve your interaction.
