--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,7 @@ Viglet Team <opensource@viglet.com>
 :viglet-version: 2025.3
 
 [preface]
-image:https://img.shields.io/badge/Download-Release%20{viglet-version}-blue?style=for-the-badge&logo=OpenJDK[link="https://viglet.com/turing/download/"]
+image:https://img.shields.io/badge/Download-Release%20{viglet-version}-blue?style=for-the-badge&logo=OpenJDK[link="https://viglet.org/turing/download/"]
 image:https://img.shields.io/github/license/openturing/turing.svg?style=for-the-badge&logo=Apache["License"]
 image:https://img.shields.io/github/last-commit/openturing/turing.svg?style=for-the-badge&logo=java)[GitHub last commit]
 image:https://img.shields.io/github/actions/workflow/status/openturing/turing/build.yml?branch=2025.3&style=for-the-badge&logo=GitHub[link="https://github.com/openviglet/turing/actions/workflows/build.yml"]
@@ -15,7 +15,7 @@ image:https://img.shields.io/badge/Javadoc-Release%20{viglet-version}-brightgree
 
 == Preface
 
-Viglet Turing (https://viglet.com/turing/) is an enterprise search platform that combines semantic navigation, chatbots, and generative artificial intelligence.
+Viglet Turing (https://viglet.org/turing/) is an enterprise search platform that combines semantic navigation, chatbots, and generative artificial intelligence.
 
 It has several integrations to facilitate enterprise search and interaction with external systems. Some of the main ones include:
 
