--- a/README.adoc
+++ b/README.adoc
@@ -141,10 +141,11 @@ import { TurSNSiteSearchService } from '@openviglet/turing-js-sdk';
 const searchService = new TurSNSiteSearchService('http://localhost:2700');
 
 // Perform search
-const results = await searchService.search('MySite', {
+const results = await searchService.search('sample-site', {
   q: 'machine learning',
   rows: 10,
-  currentPage: 1
+  currentPage: 1,
+  localeRequest: 'en_US',
 });
 
 console.log(`Found ${results.queryContext?.count} results`);
@@ -159,20 +160,9 @@ results.results?.document?.forEach(doc => {
 [source,bash]
 ----
 # Search via REST API
-curl -X GET "http://localhost:2700/api/sn/MySite/search?q=artificial%20intelligence&rows=10"
-
-# Index a document
-curl -X POST "http://localhost:2700/api/sn/MySite" \
-  -H "Content-Type: application/json" \
-  -d '{
-    "documents": [{
-      "id": "doc1",
-      "title": "Introduction to AI",
-      "content": "Artificial Intelligence is transforming industries...",
-      "category": "Technology"
-    }]
-  }'
+curl -X GET "http://localhost:2700/api/sn/sample-site/search?q=artificial%20intelligence&rows=10&_setlocale=en_US"
 ----
+
 === GraphQL API Example
 
 === API Endpoints
@@ -186,14 +176,14 @@ curl -X POST "http://localhost:2700/api/sn/MySite" \
 ----
 query {
   siteSearch(
-    siteName: "your-site-name"
+    siteName: "sample-site"
     searchParams: {
       q: "technology"
       rows: 10
       p: 1
       sort: "relevance"
     }
-    locale: "en"
+    locale: "en_US"
   ) {
     queryContext {
       count
