--- a/README.adoc
+++ b/README.adoc
@@ -3,15 +3,16 @@ Viglet Team <opensource@viglet.com>
 :organization: Viglet Turing
 :viglet-version: 2025.3
 :icons: font
+:git-project: openviglet/turing
 
 [.lead]
 *Enterprise Search Platform with Semantic Navigation, Chatbots, and Generative AI*
 
 [.badges]
 image:https://img.shields.io/badge/Download-Release%20{viglet-version}-blue?style=for-the-badge&logo=OpenJDK[link="https://viglet.org/turing/download/"]
-image:https://img.shields.io/github/license/openturing/turing.svg?style=for-the-badge&logo=Apache["License"]
-image:https://img.shields.io/github/last-commit/openturing/turing.svg?style=for-the-badge&logo=java)[GitHub last commit]
-image:https://img.shields.io/github/actions/workflow/status/openturing/turing/build.yml?branch=2025.3&style=for-the-badge&logo=GitHub[link="https://github.com/openviglet/turing/actions/workflows/validate.yml"]
+image:https://img.shields.io/github/license/{git-project}.svg?style=for-the-badge&logo=Apache["License"]
+image:https://img.shields.io/github/last-commit/{git-project}.svg?style=for-the-badge&logo=java)[GitHub last commit]
+image:https://img.shields.io/github/actions/workflow/status/openviglet/turing/validate.yml?branch={viglet-version}&style=for-the-badge&logo=GitHub[link="https://github.com/openviglet/turing/actions/workflows/validate.yml"]
 image:https://img.shields.io/badge/Sonar-Code%20Quality-brightgreen?style=for-the-badge&logo=SonarCloud[link="https://sonarcloud.io/project/overview?id=viglet_turing"]
 image:https://img.shields.io/badge/Javadoc-Release%20{viglet-version}-brightgreen?style=for-the-badge&logo=OpenJDK[link="https://turing.viglet.com/latest/javadoc/"]
 
@@ -268,13 +269,13 @@ We welcome contributions from developers of all skill levels! Here's how you can
 
 - Review our link:CONTRIBUTING.md[Contributing Guide]
 - Follow our link:CODE_OF_CONDUCT.md[Code of Conduct]
-- Check out issues labeled https://github.com/openviglet/turing/labels/good%20first%20issue["good first issue"] for beginners
+- Check out issues labeled https://github.com/{git-project}/labels/good%20first%20issue["good first issue"] for beginners
 
 === Connect with Us
 
 - 🌐 **Website**: https://viglet.org/turing/
-- 🐛 **Issues**: https://github.com/openviglet/turing/issues
-- 📋 **Discussions**: https://github.com/openviglet/turing/discussions
+- 🐛 **Issues**: https://github.com/{git-project}/issues
+- 📋 **Discussions**: https://github.com/{git-project}/discussions
 
 == 📚 Documentation & Resources
 
@@ -286,7 +287,7 @@ We welcome contributions from developers of all skill levels! Here's how you can
 
 === SDK Documentation
 
-- **Java SDK**: https://openturing.github.io/turing-java-sdk/
+- **Java SDK**: link:turing-java-sdk/README.md[Java SDK Guide]
 - **JavaScript SDK**: link:turing-js-sdk/js-sdk-lib/README.md[JS SDK Guide]
 
 == 🐳 Deployment Options
