--- a/README.adoc
+++ b/README.adoc
@@ -281,7 +281,7 @@ We welcome contributions from developers of all skill levels! Here's how you can
 
 === Essential Links
 
-- 📖 **Full Documentation**: https://docs.viglet.org/turing/
+- 📖 **Full Documentation**: https://docs.viglet.com/turing/
 - 💾 **Downloads**: https://viglet.org/turing/download/
 - 🔧 **API Documentation**: https://turing.viglet.com/latest/javadoc/
 
